[package]
name = "sdl2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
sdl2 = { verssion = "0.34.3" , features = ["gfx", "ttf"] }
cairo-rs = "0.9.1"
lazy_static = "1.4.0"
glam = { version = "0.11.2"}
rand = "0.8.0"